# ybot

./: .env  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
libs/fetcher_for_zjuer/: Readme.md  setup.cfg
libs/fetcher_for_zjuer/zju_fetcher/: __init__.py  chalaoshi_fetcher.py  school_fetcher.py
plugins/: single_session.py
plugins/apexlegends/: __init__.py  binded.json
plugins/electronic_stick/: __init__.py
plugins/hanakotoba/: __init__.py  flowers.json
plugins/markov_learning/: __init__.py
plugins/saysth/: __init__.py
plugins/zju_info/: __init__.py
utils/: __init__.py  image_utils.py  qq_image.py
