[project]
name = "ybot"
version = "0.1.0"
description = "ybot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "Console", module_name = "nonebot.adapters.console" },
    { name = "Spigot", module_name = "nonebot.adapters.spigot" },
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11", project_link = "nonebot-adapter-onebot", desc = "OneBot V11 协议"}
]
plugins = []
plugin_dirs = []
builtin_plugins = ["echo"]
