[metadata]
name = fetcher_for_zjuer
version = 1.0.0
author = xxx
long_description = file: Readme.md
license = MIT
# url = https://github.com/user/repo
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    selenium
    webdriver_manager
    PyExecJs
    aiohttp

[options.package_data]
zju_fetcher = 
    security.js